# asciiMol

./: LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml
app/: asciimol.py  renderer.py
asciimol/: __init__.py  __main__.py
asciimol/app/: __init__.py  asciimol.py  colors.py  config.py  io.py  renderer.py
asciimol/app/data/: atom_data  covalent_radii
src/asciimol/: __main__.py
src/asciimol/app/: asciimol.py  colors.py  config.py  io.py  renderer.py
tests/: README.md  test_config.py  test_io.py
